--- a/stat_analysis.Rmd
+++ b/stat_analysis.Rmd
@@ -87,7 +87,7 @@ calc_model <- function(input, model, type = "co2gC"){
 
 ## function for calculating yearly MLR 
 
-calc_yearly_MLR <- function(input, n_period, scope, type) {
+calc_yearly_MLR <- function(input, n_period, scope, type, ...) {
   
   # filter input to get each period 
   filtered_input <- as.data.frame(input) %>%
@@ -96,7 +96,8 @@ calc_yearly_MLR <- function(input, n_period, scope, type) {
   model.null <- eval(parse(text = paste0("lm(", type, "~ 1, data = filtered_input)")))
   model.step <- stepAIC(model.null, 
                         scope = scope, 
-                        trace = T) 
+                        trace = T, 
+                        ...) 
   print(model.step)
   
   # AIC result 
@@ -122,7 +123,6 @@ calc_yearly_MLR <- function(input, n_period, scope, type) {
     result_per_variable[i, "AIC"] <- result$AIC[i]
     result_per_variable[i, "R2"] <- summary(model)[["r.squared"]]
     result_per_variable[i, "adjR2"] <- summary(model)[["adj.r.squared"]]
-
   }
   result_per_variable
   
@@ -165,7 +165,8 @@ model.full <- lm(co2gC ~ ., data = weekly_nGF %>% dplyr::select(-c(date, period)
 # Start with null model
 model.step <- stepAIC(model.null, 
                       scope = list(upper = ~TS.5 + RH + PARin + VPD.y + 
-                                     Precip + PA_2M + Ta + wtd + LE + H + ustar, 
+                                     # LE + H + ustar +
+                                     Precip + PA_2M + Ta + wtd + Ta, 
                                    lower = ~1),
                       trace = T)
 
@@ -185,12 +186,21 @@ cor(weekly_nGF %>% dplyr::select(-c(date, period)))
 #   dplyr::select(-c(Ta, VPD.y, H, PARin))
 
 
+# weekly_nGF1 <- weekly_nGF %>%
+#   mutate(co2gC = log(co2gC + 1 - min(co2gC))^2,
+#          TS.5 = (TS.5 + 1 - min(TS.5))^3,
+#          LE = log(LE + 1 - min(LE))^(2),
+#          PARin = log(PARin + 1 - min(PARin))^2, 
+#          wtd = exp(wtd + 1 - min(wtd))) %>%
+#   dplyr::select(-c(Ta, VPD.y, H, PARin))
+
 weekly_nGF1 <- weekly_nGF %>%
   mutate(co2gC = log(co2gC + 1 - min(co2gC))^2,
          TS.5 = (TS.5 + 1 - min(TS.5))^3,
          LE = log(LE + 1 - min(LE))^(2),
+         PARin = log(PARin + 1 - min(PARin))^2, 
          wtd = exp(wtd + 1 - min(wtd))) %>%
-  dplyr::select(-c(Ta, VPD.y, H, PARin))
+  dplyr::select(-c(H, LE))
 
 
 # cor(weekly_nGF1%>% dplyr::select(-c(date, period)))
@@ -269,7 +279,7 @@ model.step <- stepAIC(model.null,
 
 # let's exclude precip 
 
-model_2 <- lm(co2gC ~ TS.5 + wtd + LE, data = weekly_nGF1) 
+model_2 <- lm(co2gC ~ TS.5 + wtd + PARin, data = weekly_nGF1) 
 sum_2 <- summary (model_2)
 sum_2 
 
@@ -284,7 +294,7 @@ ncvTest(model_2)
 
 ####---------------- SEPARATE LINES MODEL ---------------####
 
-model_2_sep <- lm(co2gC ~ (TS.5 + wtd + LE) * period, data = weekly_nGF1)
+model_2_sep <- lm(co2gC ~ (TS.5 + wtd + PARin) * period, data = weekly_nGF1)
 sum_2_sep <- summary(model_2_sep)
 sum_2_sep
 
@@ -404,19 +414,20 @@ daily_nGF <- left_join(daily.nGF, BB_met) %>%
 
 ## transformation 
 daily_nGF1 <- daily_nGF %>%
-  mutate(co2gC = log(co2gC + 1 - min(co2gC))^2,
-         TS.5 = (TS.5 + 1 - min(TS.5))^3,
+  mutate(co2gC = log(co2gC + 1 - min(co2gC))^3,
+         TS.5 = (TS.5 + 1 - min(TS.5))^2,
          LE = log(LE + 1 - min(LE))^(2),
-         wtd = exp(wtd + 1 - min(wtd))) %>%
-  dplyr::select(-c(Ta, VPD.y, H, PARin))  # remove due to multicollinearity
+         Ta = (Ta + 1 - min(Ta))^2, 
+         wtd = exp(wtd + 1 - min(wtd)), 
+         PARin = log(PARin + 1 - min(PARin))^2, 
+         VPD.y = log(VPD.y + 1 - min(VPD.y))^2)
 
 cor(daily_nGF1 %>% dplyr::select(-c(date, period)))
 
-
-
-
 # define the variables to be included in the model 
-scope <-  list(upper = ~TS.5 + RH + Precip + PA_2M + wtd + LE + ustar, 
+scope <-  list(upper = ~TS.5 + RH + Precip + PA_2M + wtd + 
+                 # LE + H +
+                 PARin + Ta + VPD.y ,  
                                    lower = ~1)
 
 ##---------------- period 2015-2016 ---------------##
@@ -430,13 +441,14 @@ for(i in 1: length(period)){
   mutate(period = period[i])
   } else { 
     co2_MLR_yearly <- rbind(co2_MLR_yearly, 
-                            calc_yearly_MLR(daily_nGF1, period[i], scope, "co2gC") %>% 
+                            calc_yearly_MLR(daily_nGF1, period[i], scope, "co2gC", k = 3.841) %>% 
                               mutate(period = period[i]) )}
  
   }
 
+# k = 3.8 from qchisq(0.05, 1, lower.tail = F) set alpha for individual variable to 0.05
 
-co2_MLR_yearly$variable <- substr(co2_MLR_yearly$variable,2, 5)
+co2_MLR_yearly$variable <- gsub("[+] ", "", co2_MLR_yearly$variable)
 
 write.csv(co2_MLR_yearly, "df/co2_MLR_yearly.csv")
 
@@ -485,8 +497,9 @@ model.full <- lm(ch4gC ~ ., data = weekly_nGF %>% dplyr::select(-c(date, period,
 
 # Start with null model
 model.step <- stepAIC(model.null, 
-                      scope = list(upper = ~GPP_f_RF + TS.5 + RH + PARin + VPD.y + 
-                                     Precip + PA_2M + Ta + wtd + LE + H + ustar, 
+                      scope = list(upper = ~GPP + TS.5 + RH + PARin + VPD.y + 
+                                     # LE + H + ustar +
+                                     Precip + PA_2M + Ta + wtd, 
                                    lower = ~1),
                       trace = T)
 
@@ -498,38 +511,33 @@ model.step <- stepAIC(model.null,
 cor(weekly_nGF %>% dplyr::select(-c(date, period)))
 
 
-# weekly_nGF1 <- weekly_nGF %>%drop_na()%>%
-#   mutate(ch4gC = (log10(ch4gC + 1 - min(ch4gC)))^0.5,
-#          co2gC = log10(co2gC + 1 - min(co2gC))^3,
-#          TS.5 = ((TS.5 + 1 - min(TS.5))^5),
-#          Ta = ((Ta + 1 - min(Ta))^3),
-#          wtd = log10(wtd + 1 - min(wtd))^2,
-#          LE = LE,
-#          H = log10(H + 1 - min(H))^8) %>%
-#   dplyr::select(-c(PARin, VPD.y))
-
 
 # weekly_nGF1 <- weekly_nGF %>%drop_na()%>%
-#   mutate(ch4gC = (log10(ch4gC + 1 - min(ch4gC)))^0.5,
+#   mutate(ch4gC = (log10(ch4gC + 1 - min(ch4gC)))^0.6,
 #          co2gC = (exp(co2gC + 1 - min(co2gC)))^2,
-#          # TS.5 = exp((TS.5 + 1 - min(TS.5)))^2,
+#          GPP = (GPP_f_RF + 1 - min(GPP_f_RF))^3,
+#          TS.5 = exp((TS.5 + 1 - min(TS.5)))^2,
 #          Ta = (exp(Ta + 1 - min(Ta)))^2,
-#          wtd = (exp(wtd + 1 - min(wtd)))^2,
+#          wtd = (exp(wtd + 1 - min(wtd)))^0.8,
 #          LE = log10(LE + 1 - min(LE))^2,
-#          H = (H + 1 - min(H))) %>%
-#   dplyr::select(-c(PARin, VPD.y))
+#          H = (H + 1 - min(H)), 
+#          PARin = log10(PARin + 1 - min(PARin))^2) 
+# %>%
+#   dplyr::select(-c(PARin, VPD.y, GPP_f_RF))
+
 
 weekly_nGF1 <- weekly_nGF %>%drop_na()%>%
-  mutate(ch4gC = (log10(ch4gC + 1 - min(ch4gC)))^0.6,
+  mutate(ch4gC = (log10(ch4gC + 1 - min(ch4gC)))^0.5,
          co2gC = (exp(co2gC + 1 - min(co2gC)))^2,
-         GPP = (GPP_f_RF + 1 - min(GPP_f_RF))^3, 
+         # GPP = (GPP_f_RF + 1 - min(GPP_f_RF))^3,
+         GPP = log10(GPP_f_RF + 1 - min(GPP_f_RF))^2, 
          TS.5 = exp((TS.5 + 1 - min(TS.5)))^2,
          Ta = (exp(Ta + 1 - min(Ta)))^2,
-         wtd = (exp(wtd + 1 - min(wtd)))^0.8,
+         wtd = (exp(wtd + 1 - min(wtd)))^2,
          LE = log10(LE + 1 - min(LE))^2,
-         H = (H + 1 - min(H))) %>%
-  dplyr::select(-c(PARin, VPD.y, GPP_f_RF))
-
+         H = (H + 1 - min(H)), 
+         PARin = log10(PARin + 1 - min(PARin))^2) %>% 
+  dplyr::select(-c(GPP_f_RF))
 
 
 cor(weekly_nGF1%>% dplyr::select(-c(date, period)))
@@ -540,10 +548,28 @@ pairs(weekly_nGF1 %>% dplyr::select(c(ch4gC, GPP, Ta, TS.5, wtd, LE, H)),
       main = "scatterplot matrix for mco2 ")
 
 
-model_x <- lm(ch4gC ~ wtd + LE + GPP + TS.5 , data = weekly_nGF1) 
+model_x <- lm(ch4gC ~ wtd + PARin + GPP + TS.5 , data = weekly_nGF1) 
 plot_diagnostics(weekly_nGF1, model_x, "ch4gC")
 shapiro.test(residuals(model_x))
 ncvTest(model_x)
+
+
+
+#let's check real quick
+
+# variable selection using AIC 
+# no x variable, the null model
+model.null <- lm(ch4gC ~ 1, data = weekly_nGF1 %>% dplyr::select(-c(date, period, co2gC))) 
+# all x variables
+model.full <- lm(ch4gC ~ ., data = weekly_nGF1 %>% dplyr::select(-c(date, period, co2gC))) 
+
+# Start with null model
+model.step <- stepAIC(model.null, 
+                      scope = list(upper = ~GPP + TS.5 + RH + PARin + VPD.y + 
+                                     # LE + H + ustar +
+                                     Precip + PA_2M + Ta + wtd, 
+                                   lower = ~1),
+                      trace = T)
 
 
 ####----- First combination of variables---- ####
@@ -626,7 +652,7 @@ model.step <- stepAIC(model.null,
 
 ####------- new model (lowest BIC, modified) -------####
 
-model_2 <- lm(ch4gC ~ TS.5 + wtd + LE + GPP, data = weekly_nGF1) 
+model_2 <- lm(ch4gC ~ TS.5 + wtd + GPP, data = weekly_nGF1) 
 sum_2 <- summary (model_2)
 sum_2 
 
@@ -637,7 +663,7 @@ ncvTest(model_2)
 
 ####---------------- SEPARATE LINES MODEL ---------------####
 
-model_2_sep <- lm(ch4gC ~ (GPP + wtd + LE + TS.5) * period, data = weekly_nGF1)
+model_2_sep <- lm(ch4gC ~ (GPP + wtd +  TS.5) * period, data = weekly_nGF1)
 sum_2_sep <- summary(model_2_sep)
 sum_2_sep
 
@@ -756,22 +782,21 @@ daily_nGF <- left_join(daily.nGF, BB_met) %>%
 
 ## transformation
 daily_nGF1 <- daily_nGF %>%drop_na()%>%
-  mutate(ch4gC = (log10(ch4gC + 1 - min(ch4gC)))^0.6,
+  mutate(ch4gC = (log10(ch4gC + 1 - min(ch4gC)))^0.5,
          # co2gC = (exp(co2gC + 1 - min(co2gC)))^2,
-         GPP_f_RF = (GPP_f_RF + 1 - min(GPP_f_RF))^3, 
+         GPP_f_RF = (GPP_f_RF + 1 - min(GPP_f_RF))^2, 
          TS.5 = exp((TS.5 + 1 - min(TS.5)))^2,
-         Ta = (exp(Ta + 1 - min(Ta)))^2,
-         wtd = (exp(wtd + 1 - min(wtd)))^0.8,
+         wtd = (exp(wtd + 1 - min(wtd))),
          LE = log10(LE + 1 - min(LE))^2,
-         H = (H + 1 - min(H))) %>%
-  dplyr::select(-c(PARin, VPD.y, co2gC, H, Ta)) # remove due to multicollinearity
+         H = (H + 1 - min(H))) 
 
 cor(daily_nGF1%>% dplyr::select(-c(date, period)))
 
 
 # define the variables to be included in the model
-scope <-  list(upper = ~GPP_f_RF + TS.5 + RH + 
-                       Precip + PA_2M + wtd + LE + ustar, 
+scope <-  list(upper = ~GPP_f_RF + TS.5 + RH + Ta +
+                 H + LE + 
+                 PARin + VPD.y + Precip + PA_2M + wtd, 
                lower = ~1)
 
 ##---------------- period 2015-2016 ---------------##
@@ -785,13 +810,13 @@ for(i in 1: length(period)){
   mutate(period = period[i])
   } else {
     ch4_MLR_yearly <- rbind(ch4_MLR_yearly,
-                            calc_yearly_MLR(daily_nGF1, period[i], scope, "ch4gC") %>%
+                            calc_yearly_MLR(daily_nGF1, period[i], scope, "ch4gC", k = 3.8) %>%
                               mutate(period = period[i]) )}
 
   }
 
 
-ch4_MLR_yearly$variable <- substr(ch4_MLR_yearly$variable,2, 5)
+ch4_MLR_yearly$variable <- gsub("[+] ", "", ch4_MLR_yearly$variable)
 write.csv(ch4_MLR_yearly, "df/ch4_MLR_yearly.csv")
 ```
 
